<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sudoku</string>
    <string name="app_description">Sudoku app gemaakt door 42IN13SAh.</string>
    <string name="app_credits">Sander van Leeuwen\nChristiaan Reubsaet\nDustin Sarioglu\nTim Slot\nRick Veens</string>
    <string name="action_settings">Settings</string>
    <string name="titlescreen_name">Sudoku voor Android!</string>
    <string name="startgameButtonString">Start</string>
    <string name="showinfoButtonString">Info</string>
    <string name="infoDialogMessage">Android gui voor de sudoku app.</string>
    <string name="infoDialogPositiveButtonText">Ok</string>
    
    <string name="back">Terug</string>
    <string name="start">Start</string>
    
    <string name="sudokuDifficulty">Moeilijkheidsgraad</string>
    <string name="sudokuDifficultyEasy">Makkelijk</string>
    <string name="sudokuDifficultyMedium">Gemiddeld</string>
    <string name="sudokuDifficultyHard">Moeilijk</string>
    
    <string name="sudokuSize">Bord grootte</string>
    <string name="sudokuSizeSmall">Klein</string>
    <string name="sudokuSizeMedium">Normaal</string>
    <string name="sudokuSizeLarge">Groot</string>

</resources>
